--- a/lesson 13/services/services.css
+++ b/lesson 13/services/services.css
@@ -169,7 +169,7 @@ footer, footer a {
 @media only screen and (min-width: 54.5em){ 
      #navigation {
         width: 800px;
-        margin-left: 400px;
+        margin-left: 350px;
      }
      ul {
   padding: 0;
